# zero-amusing-iching-things

./: .gitignore  README.md  demo.py  pyproject.toml
notebooks/: dev.ipynb
zero_iching/: CLI_HELP.md  __init__.py  bit_waterfall.py  cli.py  display_chargrid.py  helpers.py  judgement_of_string.py  uuid_demo.py  uuid_diviner.py
zero_iching/dao_field/: __init__.py  core.py
zero_iching/templates/: uuid_output.jinja2
