[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-iching"
version = "0.1.0"
description = "Template CLI for zero-iching"
authors = [{name = "Example", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["jinja2>=3.0"]

[project.scripts]
zero-iching = "zero_iching.cli:main"

[tool.setuptools.package-data]
"zero_iching.templates" = ["*.jinja2"]
